--- a/portalcci/templates/niveisEnsino.html
+++ b/portalcci/templates/niveisEnsino.html
@@ -1,56 +1,111 @@
 {% extends 'base.html' %}
 {% block conteudo %}
 
+<style>
+    .text:hover{
+        transform: scale(1.09);
+        -webkit-text-stroke: 2px rgb(3, 3, 3);
+    }
+
+    .titutec, .titufund, .tituem , .titufac, .tituei{
+        font-family: 'Montserrat', sans-serif;
+        -webkit-text-stroke: 1px rgb(5, 5, 5);
+        color: transparent;
+        font-family: var(--titulo);
+        font-weight: bold;
+        text-transform: uppercase;
+        writing-mode: vertical-lr;
+        transform: rotate(180deg);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20%;
+    }
+    .tituei{
+        font-size: 65px;
+    }
+    .titufac {
+        font-size: 70px;
+    }
+    .titutec {
+        font-size: 50px;
+    }
+    .tituem {
+        font-size: 55px;
+    }
+</style>
+
 <div class="wrapper">
-<div class="container-fluid">
-<div class="row row-cols-1 row-cols-md-3 g-4" style="margin-left: 10%; margin-right:10%; margin-bottom: 5%;">
-    <div class="col" >
-        <div class="d-flex align-items-center justify-content-center text-center" style="height: 500px;">
-        <p class="h4 fw-bold">CONHEÇA NOSSO ENSINO</p>
-        </div>
+    <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-left: 10%; margin-right:10%; margin-bottom: 5%;">
+            <div class="col">
+                <div class="d-flex align-items-center justify-content-center text-center" style="height: 500px;">
+                    <p class="h4 fw-bold">CONHEÇA NOSSO ENSINO</p>
+                </div>
 
-    </div>
-    <div class="col-md-2">
-        <a href="{{url_for('educacao_infantil')}}">
-        <div class="bg-image hover-zoom img-fluid"> <img src="{{ url_for('static', filename='../static/img/ED.png') }}" class="w-100" style="height:500px; width:200px;">
-        </div>
-        </a>
-        <button type="button" class="btn btn-secondary btn-rounded position-absolute fixed-bottom align-items-center justify-content-center text-center" data-mdb-ripple-color="blue" style="width: 130px; margin-left:17%; margin-bottom:50px;">ED. INFANTIL</button>
-    </div>
-    <div class="col-md-2">
-        <a href="{{url_for('ensino_fundamental')}}">
-         <div class="bg-image hover-zoom img-fluid"> <img src="{{ url_for('static', filename='../static/img/EF.png') }}" class="w-100" style="height:500px; width:200px;">
-         </div>
-        </a>
-        <button type="button" class="btn btn-light btn-rounded position-absolute fixed-bottom align-items-center justify-content-center text-center" data-mdb-ripple-color="blue" style="width: 130px; margin-left:17%; margin-bottom:50px;">ENSINO FUND</button>
-    </div>
-    <div class="col-md-2">
-        <a href="{{url_for('ensino_medio')}}">
-        <div class="bg-image hover-zoom img-fluid"> <img src="{{ url_for('static', filename='../static/img/EM.png') }}" class="w-100" style="height:500px; width:200px;">
-        </div>
-        </a>
-        <button type="button" class="btn btn-info btn-rounded position-absolute fixed-bottom align-items-center justify-content-center text-center" data-mdb-ripple-color="blue" style="width: 130px; margin-left:17%; margin-bottom:50px;">ENSINO MÉDIO</button>
-    </div>
-    <div class="col-md-2">
-        <a href="https://www.tecscci.com.br/">
-        <div class="bg-image hover-zoom img-fluid"> <img src="{{ url_for('static', filename='../static/img/TÉCNICO.png') }}" class="w-100" style="height:500px; width:200px;">
-        </div>
-        </a>
-        <button type="button" class="btn btn-info btn-rounded position-absolute fixed-bottom align-items-center justify-content-center text-center" data-mdb-ripple-color="blue" style="width: 130px; margin-left:17%; margin-bottom:50px;">TÉCNICO</button>
-    </div>
-    <div class="col-md-2">
-            <div class="text-center">
-            <a href="https://www.faculdadecci.com.br/">
-            <div class="bg-image hover-zoom img-fluid align-items-center justify-content-center text-center justify-content-center"> <img src="{{ url_for('static', filename='../static/img/FACULDADE.png') }}" class="w-100" style="height:500px; width:200px;">
             </div>
-            </a>
-            <button type="button" class="btn btn-info btn-rounded position-absolute fixed-bottom align-items-center justify-content-center text-center" data-mdb-ripple-color="blue" style="width: 130px; margin-left:17%; margin-bottom:50px;">Faculdade</button>
+            <div class="col-md-2">
+                <a href="{{url_for('educacao_infantil')}}">
+                    <div class="hover-zoom img-fluid"> <img
+                            src="{{ url_for('static', filename='../static/img/ED.png') }}" class="w-100"
+                            style="height:500px; width:200px;">
+                    </div>
+                    <blockquote class="blockquote fixed-bottom position-absolute tituei">
+                        <p class="text">ED. INFANTIL</p> </blockquote>
+                </a>
             </div>
+            <div class="col-md-2">
+                <a href="{{url_for('ensino_fundamental')}}">
+                    <div class="hover-zoom img-fluid"> <img
+                            src="{{ url_for('static', filename='../static/img/EF.png') }}" class="w-100"
+                            style="height:500px; width:200px;">
+                    </div>
+                    <blockquote class="blockquote fixed-bottom position-absolute tituem">
+                        <p class="text">FUNDAMENTAL</p> </blockquote>
+
+                </a>
+            </div>
+            <div class="col-md-2 ">
+                <a href="{{url_for('ensino_medio')}}">
+                    <div class="hover-zoom img-fluid"> <img
+                            src="{{ url_for('static', filename='../static/img/EM.png') }}" class="w-100"
+                            style="height:500px; width:200px;">
+                    </div>
+                    <blockquote class="blockquote fixed-bottom position-absolute tituem">
+                        <p class="text">ENSINO MéDIO</p> </blockquote>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="https://www.tecscci.com.br/">
+                    <div class="tec2 img-fluid hover-zoom"> <img
+                            src="{{ url_for('static', filename='../static/img/TÉCNICO.png') }}" class="w-100"
+                            style="height:500px; width:200px;">
+                    </div>
+                    <blockquote class="blockquote fixed-bottom position-absolute titutec">
+                        <p class="text">ESCOLA TÉCNICA</p>
+                    </blockquote>
+                </a>
+
+            </div>
+            <div class="col-md-2">
+                <a href="https://www.faculdadecci.com.br/">
+                    <div
+                        class="hover-zoom img-fluid align-items-center justify-content-center text-center justify-content-center">
+                        <img src="https://docs.google.com/uc?id=1cVDorck6rGIY6gUbPGsor-jS7JW--H9O" class="w-100"
+                            style="height:500px; width:200px;"> 
+
+                            
+                            
+                    </div>
+                    <blockquote class="blockquote fixed-bottom position-absolute titufac">
+                        <p class="text">FACULDADE</p>
+                    </blockquote>
+                </a>
+            </div>
+
+
+        </div>
     </div>
-
-
-</div>
-</div>
 </div>
 
 {% endblock conteudo %}
