--- a/portalcci/templates/base.html
+++ b/portalcci/templates/base.html
@@ -42,16 +42,17 @@
 </head>
 
 
-<body style="background-image: url( {{url_for('static', filename='../static/img/back.jpg') }} )">
+<body style="background-image: url( {{url_for('static', filename='../static/img/bngc.jpg')}} )">
     <header class="mb-5" style="margin-bottom: 0px; padding-bottom:0px;">
 
         <div class="p-3 text-center text-dark" style="background-color: white;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 d-flex justify-content-center justify-content-md-start mb-3 mb-md-0">
-                        <a href="{{url_for('homepage')}}" class="ms-md-2">
+                        <a href="{{url_for('home')}}" class="ms-md-2">
                             <img src="{{ url_for('static', filename='../static/img/logo_cci-removebg-preview.png') }}" height="35" />
                         </a>
+                        <button type="button" class="btn btn-primary btn-rounded btn-sm" style="margin-left:90px; max-height: 40px; max-width: 200px;">Pré Matricula</button>
                     </div>
 
                     <div class="col-md-4">
@@ -104,7 +105,7 @@
                         <li class="nav-item fw-bold"><a href="#" class="nav-link active"
                                 style="color: white; margin: 5px; margin-left: 15px; font-size: larger;">Blog</a>
                         </li>
-                        <li class="nav-item fw-bold"><a href="#" class="nav-link active"
+                        <li class="nav-item fw-bold"><a href="{{url_for('fale_conosco')}}" class="nav-link active"
                                 style="color: white; margin: 5px; margin-left: 15px; font-size: larger;">Fale
                                 Conosco</a></li>
                     </ul>
@@ -224,9 +225,9 @@
                         <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
                         <p><i class="fas fa-home me-3 text-secondary"></i>QN 401 Cojunto D - Samambaia/DF- CEP
                             72.319-502</p>
-                        <iframe
+                        <iframe 
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3837.8079889310084!2d-48.1003836784851!3d-15.866685953842955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935bcd5f3659efbb%3A0xdf20e8a46bd89fd9!2sCentro%20Educacional%20CCI%20S%C3%AAnior!5e0!3m2!1spt-BR!2sbr!4v1667342864676!5m2!1spt-BR!2sbr"
-                            width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                            width="300" height="150" style="border-width: 1px;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <a href="mailto:cci@portalcci.com.br">
                             <i class="fas fa-envelope me-3 text-secondary"></i>
