--- a/portalcci/templates/homepage.html
+++ b/portalcci/templates/homepage.html
@@ -27,10 +27,16 @@
 <br>
 <br>
 
-<div class="text-center">
+<!-- <div class="text-center">
 <video autoplay loop poster="#" style="background-color: #0D47A1; height: 80%; width: 80%; " muted>
   <source src="{{ url_for('static', filename='../static/img/Vídeo Institucional - 2020.mp4') }}" type="video/mp4">
-</video>
+</video> -->
+
+<div class="text-center">
+  <video autoplay loop poster="#" style="height: 80%; width: 80%; " muted>
+    <source src="https://docs.google.com/uc?id=1RP47ATt9o5cW1_PMDgcV-HgUA0uNlvlm" type="video/mp4">
+  </video>
+
 </div>
 <br>
 <br>
